--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,13 @@ box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;  
  }
+ img {
+display: block;
+max-width: 100%;
+height: auto;
+}
 .container{
-   width: 100%;
+width: 100%;
 max-width: 1158px;
 margin: 0 auto;
 padding-left: 15px;
@@ -29,25 +34,23 @@ padding-right: 15px ;
 .container-nav {
 display: flex;
 align-items: center;
-gap:40px;
 }
 .header-nav {
    display: flex;
-      align-items: center;
-      flex-grow: 1;
+   align-items: center;
+   flex-grow: 1;
 }
 
 .container-address
  
-.header {
-    color: var(--color-navyblue);
+.header { 
+   color: var(--color-navyblue);
+   border-color: var(--color-conflover);
+   border-bottom: 1px;
  }
 
 .logo-link {
-margin-top: 24px;
-margin-bottom: 24px;
 margin-right: 76px;
-
     color: var(--color-iris);
     font-family: Raleway, sans-serif; 
         font-size: 18px;
@@ -66,19 +69,15 @@ color: var(--color-navyblue);
  }
  .header-menu {
    display: flex;
+
    gap: 40px;
    list-style-type: none;
-   padding: 0;
-   margin: 0;
+   padding: 24px 0;
+   margin-top: 0;
+   margin-bottom: 0;
+   ;
  }
-.ul-section-two {
-   display: flex;
-   align-items: center;
-   gap: 24px;
-   list-style-type: none;
-   padding: 0;
-   margin: 0;
-}
+
  .ul{
    list-style-type: none;
    padding: 0;
@@ -86,7 +85,8 @@ color: var(--color-navyblue);
 }
 .header-link {
    display: block;
-   
+   padding-top: 24px;
+   padding-bottom: 24px;
    color: var(--color-navyblue);
    font-weight: 500;
    line-height: 1.5;
@@ -98,6 +98,8 @@ color: var(--color-ocean);
 }
 
 .address-link {
+   padding-top: 24px;
+   padding-bottom: 24px;
    color: var(--color-primary);
    line-height: 1.5;
    letter-spacing: 0.02em;
@@ -110,19 +112,15 @@ color: var(--color-ocean);
 }
 
 .section-one{
-   padding-top: 188px;
+padding-top: 188px;
+padding-bottom: 188px;
 background-color: var(--color-navyblue);
 text-align: center;
 }
-.section-two {
-   padding: 120px 0;
-}
+
 
 .hero-title {
-
    margin-top: 0;
-   
-   width: 496px;
    color: var(--color-white);
    font-size: 56px;
    font-weight: 700;
@@ -134,12 +132,11 @@ text-align: center;
 
 
 .button-main { 
-   display: inline-block;
    padding: 16px 32px;
-   margin-bottom: 188px;
    margin-top: 48px;
    
    border-radius: 4px;
+   border: 0;
    min-width: 169px;
    
 color: var(--color-white);
@@ -151,11 +148,25 @@ background-color: var(--color-iris);
    letter-spacing: 0.04em;
    cursor: pointer;
 
+
    
 }
 .button-main:hover, .button-main:focus {
    background-color: var(--color-ocean);
 }
+
+.section-two {
+   padding: 120px 0;
+}
+.ul-section-two {
+   display: flex;
+   align-items: center;
+   gap: 24px;
+   list-style-type: none;
+   padding: 0;
+   margin: 0;
+} 
+
 .visually-hidden {
 position: absolute;
    white-space: nowrap;
@@ -168,13 +179,13 @@ position: absolute;
    clip-path: inset(50%);
    margin: -1px;
 }
-.card{
-   text-decoration: none;
+.li-section-two {
+ flex-basis: calc(100%/4);  
 }
 
 .header-three {
-margin: 0;
-padding-bottom: 8px;
+margin-top: 0;
+margin-bottom: 8px;
 
 color: var(--color-navyblue);
 font-size: 20px;
@@ -208,7 +219,9 @@ letter-spacing: 0.02em;
    padding-bottom: 120px;
 background-color: var(--color-cloud); 
 }
-
+.name-profesion {
+   padding: 32px 16px;
+}
 .name {
    margin: 0;
    color: var(--color-navyblue);
@@ -231,21 +244,21 @@ background-color: var(--color-cloud);
 .desctibe-team {
    background-color: var(--color-white);
    margin: 0;
+   border-radius: 4px;
    
 }
 .footer {
    padding-top: 100px ;
    padding-bottom: 100px;
-   padding-right: 1020px;
-   padding-left: 156px;
    background-color: var(--color-navyblue);
 }
 .span-logo-footer {
    color: var(--color-cloud);
 }
 .text-footer { 
-margin: 0;
-padding-top: 16px;
+margin-bottom: 0;
+margin-top: 16px;
+width: 264px;
 
    color: var(--color-conflover);
    font-size: 16px;
@@ -255,6 +268,8 @@ padding-top: 16px;
 
 /*портфоліо*/
 .section-portfolio {
+   padding-top: 96px;
+   padding-bottom: 120px;
 }
 .ul-button {
    display: flex;
@@ -262,22 +277,25 @@ padding-top: 16px;
    gap: 24px;
    justify-content: center;
    list-style-type: none;
-      padding-top: 96px;
-      margin-top: 0;
-      margin-bottom: 72px;
+      padding: 0 0 72px 0;
+      margin: 0;
+}
+.card {
+   text-decoration: none;
 }
 .portfolio-button {
    padding: 12px 24px ;
    color: var(--color-iris);
    background-color: var(--color-cloud);
-   border: var(--color-conflover);  
+   border-color: var(--color-conflover);  
       font-family: Roboto, sans-serif;
       font-size: 16px;
       font-weight: 500;
       line-height: 1.5;
       letter-spacing: 0.04em;
       cursor: pointer;
-      border: 1p;
+      border: 1px;
+      border-radius: 4px;
 }
 .portfolio-button:hover, .portfolio-button:focus{
    color: var(--color-white);
@@ -285,32 +303,50 @@ padding-top: 16px;
 }
 .ul-portfolio-card {
    display: flex;
-   align-items: center;
-   gap: 24px;
    flex-wrap: wrap;
-   list-style-type: none;
+   gap: 24px;
+   align-items: center;
+  
    padding: 0;
-   margin: 0;
+   margin-top: 0;
+   margin-left: 0;
+   margin-bottom:-48px ;
+   margin-right: -24px;
 }
-/*.li-card {
-   border: 1px solid;
-   border-color: var(--color-conflover);
-}*/
+.project-branch {
+   margin: 32px 10px;
+}
+.li-card {
+flex-basis: calc(100%/3-24px);
 
+margin-top: 0;
+margin-left: 0;
+margin-bottom: 48;
+margin-right: 24;
+padding: 0;
+list-style-type: none;
+   /*outline: 1px solid tomato;
+   border: 1px solid;
+   border-color: var(--color-conflover);*/
+}
+.img-portfolio {
+   /*outline:  1px solid tomato;*/
+}
 .name-project {
-   margin-top: 32px ;
-   margin-bottom: 0;
-   padding: 0 54px 8px 16px;
+   margin: 0;
+   padding: 0;
 color: var(--color-navyblue);
    font-size: 20px;
    font-weight: 500;
    line-height: 1.2;
    letter-spacing: 0.02em;
+   /*outline: 1px solid tomato;*/
 }
 .branch {
-   margin: 0 0 32px 0;
-   padding-left: 16px;
+   margin: 8px 0 0 0 ;
+   padding: 0;
    color: var(--color-primary);
    line-height: 1.5;
    letter-spacing: 0.02em;
+   /*outline: 1px solid tomato;*/
 }
